* fix the png export by using the vcomputeboundingbox visitor to calculate the documents bounding box * do not consider deleted objects when computing the bounding box

This fixes bug 140790 because when exporting to tiff the filter
chain exports to png first and then uses a krita filter to convert
to tiff.

BUG:140790


svn path=/branches/koffice/1.6/koffice/; revision=628943